--- a/client/src/pages/Home/Home.scss
+++ b/client/src/pages/Home/Home.scss
@@ -3,7 +3,7 @@
 .homeBox {
     margin: 0 auto;
     margin-top: 20vh;
-    width: 300px;
+    width: auto;
     font-family: $text-font;
 
     button {
